# PBACalib

./: .gitignore  GtCalc.m  LICENCE.md  README.md  main_cali_real_eval.m
LM_OptmAll_solver/: f_optm_MLE.m  f_optm_MLE_with_cam.m  f_optm_MLE_with_s.m  f_optm_with_s.m
LM_OptmAll_solver/jocbian/: f_derivative_Pjk_Ri.m  f_derivative_Pjk_Rj.m  f_derivative_Pjk_s.m  f_derivative_Pk_R.m  f_derivative_Pk_n.m  f_derivative_Pk_t.m  f_derivative_e_Pjk.m  f_derivative_pjk_pik.m  f_e_jocb_barP.m  f_e_jocb_n.m  f_e_jocb_t.m  f_e_jocb_ti.m  f_e_jocb_uik.m  f_e_jocb_ujk.m
LM_solver/jocbian/: f_derivative_Pjk_tj.m  f_e_jocb_Ri.m  f_e_jocb_Rj.m  f_e_jocb_tj.m
colmap/: f_getPairedPxPt3D.m  f_getPxPoints3D.m  wirte_model.m
matlab/: main_cali_real.m  main_cali_real_eval.m  main_cali_real_eval2.m  main_cali_simu.m  undist_imgs.m
matlab/LM_solver/: f_initT_withPlane.m  f_optm_MLE_cam.m  f_optm_MLE_with_cam.m
matlab/colmap/: read_model.m
matlab/utils/: f_PxsWithProErr_c.m  f_calcPlaneCovariance.m  f_dataPreprocess.m  f_dataPreprocess2.m  f_findPlaneWithpx.m  (+2 more)
ros_ws/src/livox_cam_tools/: CMakeLists.txt  package.xml
ros_ws/src/livox_cam_tools/include/: BagReader.cc  BagReader.h  CMakeLists.txt  file_op.hpp
ros_ws/src/livox_cam_tools/src/: bag_extractor.cc  img_recorder.cc  liv_map_cam_recorder.cc  livox_map_real.cc  livox_map_simu.cc  rotm2eul.cc
shell/: rand_pick_data.sh  repeat_run_sparse_sfm.sh  run_sparse_sfm.sh
utils/: f_PxsWithProErr_l.m  f_dataPreprocess.m  f_err_analysis.m  f_findPtsfromPx.m  f_kmeans.m  f_lee2rotm.m  f_myundistortImage.m  f_planeChooseInCamera.m  f_rotm2lee.m  f_skew.m
visualize/: f_plot_match.m  f_pro_livox2cam.m  f_pro_livox2cam_i.m  f_pt_project_depth2image.m
(+30 files in other folders)
